# eDepot

./: .gitattributes  Cargo.toml  README.md  build.rs  config.toml
.github/workflows/: ci.yml  release.yml
ebpf/: Cargo.toml  build.rs
ebpf/src/: main.rs
src/: error.rs  event.rs  lib.rs  main.rs
src/collector/: ebpf_source.rs  error.rs  event_source.rs  hybrid_source.rs  mod.rs  proc_net_source.rs
src/config/: mod.rs
src/dispatcher/: error.rs  mod.rs
src/env_check/: mod.rs
src/nft/: error.rs  mod.rs  raw.rs
src/rules/: error.rs  mod.rs  sliding_window.rs
src/storage/: error.rs  mod.rs
src/worker/: error.rs  mod.rs
